# TuneSnap

./: README.md  app.yaml  dataset.py  json_builder.py  main.py  pyproject.toml  song_list.txt  songs.json  train.py
static/: script.js
templates/: index.html
