[tool.poetry]
name = "shazam-iths"
version = "0.1.0"
description = ""
authors = ["nitrodegen <gavrilo.net@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchaudio = "^2.1.2"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
flask = "^3.0.1"
pyroomacoustics = "^0.7.3"
eyed3 = "^0.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
